--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
       <div class="footer">
-        Check the code&nbsp;<a href=""> here!</a>
+        Check the code&nbsp;<a href="https://github.com/fdmarti/expanding-cards"> here!</a>
       </div>
     <script type="module" src="/main.js"></script>
   </body>
